added sneakers creating page and sneakers model

--- a/ASP CORE MVC/Views/Shared/_Layout.cshtml
+++ b/ASP CORE MVC/Views/Shared/_Layout.cshtml
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <span class="logo">heroband</span>
+        <span class="logo">Sneakers</span>
         <nav>
             <a href="/">Main</a>
-            <a href="/contacts">Contacts</a>
+            <a href="/Add">Add</a>
         </nav>
     </header>
     <main>
