--- a/ASP CORE MVC/wwwroot/css/site.css
+++ b/ASP CORE MVC/wwwroot/css/site.css
@@ -40,6 +40,49 @@ main {
     margin: 50px 0;
 }
 
+    main label {
+        width: 80%;
+        margin-top: 10px;
+        display: block;
+    }
+    main input:not([type="submit"]) {
+        width: 90%;
+        padding: 10px 14px;
+        font-size: 14px;
+        border-radius: 5px;
+        border: 1px solid silver;
+        outline: none;
+        margin-top: 7px;
+    }
+        main input:not([type="submit"]):focus {
+            border: 1px solid #ff0000;
+        }
+
+    main input[type="submit"] {
+        width: 40%;
+        padding: 10px 0;
+        font-size: 15px;
+        text-align: center;
+        border-radius: 5px;
+        border: 0;
+        margin-top: 7px;
+        background: #ff6a00;
+        font-weight: bold;
+        color: #833904;
+        cursor: pointer;
+    }
+
+        main input[type="submit"]:hover {
+            background: #d96614;
+        }
+
+    main form span {
+        color: #ff0000;
+        font-weight: bold;
+        display: block;
+        margin: 5px 0;
+    }
+
 footer {
     margin-top: 150px;
     text-align: center;
