--- a/ASP CORE MVC/Views/_ViewImports.cshtml
+++ b/ASP CORE MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ASP_CORE_MVC
 @using ASP_CORE_MVC.Models
+@using ASP_CORE_MVC.Models.Dto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
