--- a/ASP CORE MVC/wwwroot/css/site.css
+++ b/ASP CORE MVC/wwwroot/css/site.css
@@ -3,41 +3,12 @@
     padding: 0;
 }
 
-body {
-    background: silver;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
-header {
-    width: 80%;
-    padding: 15px 10%;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #333;
-    border-bottom: 2px solid #000;
-}
-
-header .logo{
-    font-weight: 600;
-    font-size: 25px;
-}
-
-header nav a {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 15px;
-}
-
-header nav a:hover {
-    text-decoration: underline
-}
 
 main {
     width: 80%;
     padding: 15px 10%;
     margin: 50px 0;
+    height: 100%
 }
 
     main label {
@@ -82,13 +53,3 @@ main {
         display: block;
         margin: 5px 0;
     }
-
-footer {
-    margin-top: 150px;
-    text-align: center;
-    width: 100%;
-    padding: 25px 0;
-    color: #fff;
-    background: #333;
-    border-top: 2px solid #000;
-}
