changed the architecture of the project

--- a/ASP CORE MVC/Views/AllProducts/Index.cshtml
+++ b/ASP CORE MVC/Views/AllProducts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SneakersShortInfoDto>
+﻿@model IEnumerable<SneakersShortInfoViewModel>
 @{
     ViewData["Title"] = "All Products";
 }
