--- a/ASP CORE MVC/Views/_ViewImports.cshtml
+++ b/ASP CORE MVC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using ASP_CORE_MVC
-@using ASP_CORE_MVC.Models
-@using ASP_CORE_MVC.Models.Dto
+﻿@using ShoeStore
+@using ShoeStore.Models
+@using ShoeStore.Models.Entities
+@using ShoeStore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
