--- a/ShoeStore/Views/Shared/_Layout.cshtml
+++ b/ShoeStore/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
                 </form>
 
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-warning">Sign-up</button>
+                    <a href="/Login" class="btn btn-outline-light me-2">Login</a>
+                    <a href="/Register" class="btn btn-warning">Sign-up</a>
                 </div>
             </div>
         </div>
