--- a/ShoeStore/Views/Shared/_Layout.cshtml
+++ b/ShoeStore/Views/Shared/_Layout.cshtml
@@ -15,19 +15,38 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="/AllProducts" class="nav-link px-2 text-white">All Products</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li>
+                            <a href="/" class="nav-link px-2 @(ViewContext.RouteData.Values["controller"]?.ToString() == "Home" ? "text-secondary" : "text-white")">Home</a>
+                        </li>
+                        <li>
+                            <a href="/AllProducts" class="nav-link px-2 @(ViewContext.RouteData.Values["controller"]?.ToString() == "AllProducts" ? "text-secondary" : "text-white")">All Products</a>
+                        </li>
+                        <li>
+                            <a href="/FAQs" class="nav-link px-2 @(ViewContext.RouteData.Values["controller"]?.ToString() == "FAQs" ? "text-secondary" : "text-white")">FAQs</a>
+                        </li>
+                        <li>
+                            <a href="/About" class="nav-link px-2 @(ViewContext.RouteData.Values["controller"]?.ToString() == "About" ? "text-secondary" : "text-white")">About</a>
+                        </li>
+                    </ul>
+
                 </ul>
+
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                     <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
                 </form>
 
                 <div class="text-end">
-                    <a href="/Login" class="btn btn-outline-light me-2">Login</a>
-                    <a href="/Register" class="btn btn-warning">Sign-up</a>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a href="/Logout" class="btn btn-outline-light">Logout</a>
+                    }
+                    else
+                    {
+                        <a href="/Login" class="btn btn-outline-light me-2">Login</a>
+                        <a href="/Register" class="btn btn-warning">Sign-up</a>
+                    }
                 </div>
             </div>
         </div>
