--- a/ShoeStore/Views/Account/Login.cshtml
+++ b/ShoeStore/Views/Account/Login.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Login";
 }
 
-<div class="container mt-5">
-    <form asp-action="Login" method="post">
+<div class="container-fluid d-flex justify-content-center align-items-center" style="height: 80vh;">
+    <form asp-action="Login" method="post" class="col-md-4">
         <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
 
         <div class="form-floating mb-3">
@@ -12,10 +12,15 @@
             <label for="floatingInput">Email address</label>
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <div class="form-floating mb-3">
-            <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password" />
-            <label for="floatingPassword">Password</label>
-            <span asp-validation-for="Password" class="text-danger"></span>
+        <div class="mb-3 position-relative">
+            <div class="form-floating">
+                <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password" />
+                <label for="floatingPassword">Password</label>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <button type="button" class="btn btn-outline-secondary btn-sm shadow-none position-absolute top-50 end-0 translate-middle-y me-3 toggle-visibility" data-target="floatingPassword">
+                <i class="bi bi-eye"></i>
+            </button>
         </div>
 
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
