--- a/ShoeStore/wwwroot/css/site.css
+++ b/ShoeStore/wwwroot/css/site.css
@@ -1,55 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
+body{
+    background: #ffffff;
 }
-
-
-main {
-    width: 80%;
-    padding: 15px 10%;
-    margin: 50px 0;
-    height: 100%
-}
-
-    main label {
-        width: 80%;
-        margin-top: 10px;
-        display: block;
-    }
-    main input:not([type="submit"]) {
-        width: 90%;
-        padding: 10px 14px;
-        font-size: 14px;
-        border-radius: 5px;
-        border: 1px solid silver;
-        outline: none;
-        margin-top: 7px;
-    }
-        main input:not([type="submit"]):focus {
-            border: 1px solid #ff0000;
-        }
-
-    main input[type="submit"] {
-        width: 40%;
-        padding: 10px 0;
-        font-size: 15px;
-        text-align: center;
-        border-radius: 5px;
-        border: 0;
-        margin-top: 7px;
-        background: #ff6a00;
-        font-weight: bold;
-        color: #833904;
-        cursor: pointer;
-    }
-
-        main input[type="submit"]:hover {
-            background: #d96614;
-        }
-
-    main form span {
-        color: #ff0000;
-        font-weight: bold;
-        display: block;
-        margin: 5px 0;
-    }
