--- a/ShoeStore/Views/Shared/_Layout.cshtml
+++ b/ShoeStore/Views/Shared/_Layout.cshtml
@@ -97,10 +97,10 @@
             </div>
         </div>
     </footer>
-    
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/PasswordVisibility.js"></script>
+    <script src="~/js/FilterBrandVisibility.js"></script>
 </body>
 </html>
