--- a/ShoeStore/Views/AllProducts/Edit.cshtml
+++ b/ShoeStore/Views/AllProducts/Edit.cshtml
@@ -23,9 +23,9 @@
 
         <!-- Size -->
         <div class="form-group mb-4">
-            <label asp-for="Size" class="form-label">Size</label>
-            <input asp-for="Size" class="form-control" type="number" placeholder="Enter size" />
-            <span asp-validation-for="Size" class="text-danger"></span>
+            <label asp-for="Sizes" class="form-label">Sizes (e.g., '36 37 38')</label>
+            <input asp-for="Sizes" class="form-control" placeholder="Enter sizes separated by spaces" />
+            <span asp-validation-for="Sizes" class="text-danger"></span>
         </div>
 
         <!-- Price -->
