--- a/ShoeStore/Views/Account/Login.cshtml
+++ b/ShoeStore/Views/Account/Login.cshtml
@@ -3,8 +3,9 @@
     ViewData["Title"] = "Login";
 }
 
-<div class="container-fluid d-flex justify-content-center align-items-center" style="height: 80vh;">
-    <form asp-action="Login" method="post" class="col-md-4">
+<div class="container-fluid d-flex flex-column justify-content-center align-items-center" style="height: 80vh;">
+    <!-- Форма для обычного входа -->
+    <form asp-action="Login" method="post" class="col-md-4 mb-3">
         <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
 
         <div class="form-floating mb-3">
@@ -28,5 +29,13 @@
         <div class="text-center mt-3">
             <p>Don't have an account? <a href="/Register" class="text-decoration-none">Sign up here</a></p>
         </div>
+    </form>
+
+    <!-- Форма для Google входа -->
+    <form asp-controller="Account" asp-action="ExternalLogin" method="post" class="col-md-4 text-center">
+        <input type="hidden" name="provider" value="Google" />
+        <button type="submit" class="btn btn-outline-danger">
+            <i class="bi bi-google me-2"></i> Sign in with Google
+        </button>
     </form>
 </div>
