added comments and rating logic

--- a/ShoeStore/Views/Shared/_Layout.cshtml
+++ b/ShoeStore/Views/Shared/_Layout.cshtml
@@ -102,5 +102,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/PasswordVisibility.js"></script>
     <script src="~/js/FilterBrandVisibility.js"></script>
+    <script src="~/js/SubmitRating.js"></script>
 </body>
 </html>
